Fix image width on mobile

--- a/source/stylesheets/_blog.scss
+++ b/source/stylesheets/_blog.scss
@@ -552,7 +552,6 @@ $width-xlarge: 1192px;
         width: calc(100vw - 40px);
         max-width: $width-medium;
         margin: 0;
-        height: auto;
       }
 
       h4 {
@@ -573,6 +572,12 @@ $width-xlarge: 1192px;
           }
         }
       }
+    }
+
+    // images inside <section>
+
+    img {
+      height: auto;
     }
 
     .footnotes {
@@ -712,6 +717,12 @@ $width-xlarge: 1192px;
   h4 {
     text-align: center;
     line-height: 150%;
+  }
+  h4.image-description {
+    text-align: center;
+    line-height: 150%;
+    color: $color-text--faded;
+    margin-top: 8px;
   }
 }
 .image--cover {
